@@ -1,4 +1,20 @@
-#Maven-oriented JSesh distributions. 
+# JSesh sources
+Welcome to JSesh sources! 
+
+JSesh is a Java hieroglyphic editor 
+developed by Serge Rosmorduc (serge.rosmorduc@qenherkhopeshef.org)
+
+JSesh developpers :
+- Serge J.-P. Thomas : most of the fonts
+- S. Rosmorduc : almost all the code, a few glyphs in the fonts
+- Wayne Collins (CVS, ant improvement)
+
+
+Licences for the various libraries used by JSesh can be found in resources/licenses
+
+
+
+## Source Content 
 Contains the following folders and modules:
 
 ### Maven modules for JSesh
@@ -78,16 +94,58 @@ build the whole project: "mvn install".
 
 3. place jre 8 in the Contents folder of JSesh.app, with "jre" as folder name.
 
-4. (maybe not needed anymore ?) Bundled JRE for mac os X distribution need to patch `flavormap.properties`:
-        add the line PDF: application/pdf (allows copy/paste of PDF)
-        P.S. see if we can handle this as EMF ? (check if still needed
-        anyway)
-
-
 6. Check if JSesh and SignInfo are functional (they should start if you double click on them).
 
 7. make a package (.pkg) with "Packages" by Stéphane Sudre.
     See JSesh-dist.pkgproj for a config file for the Packages software for Mac.
+
+
+(maybe not needed anymore ?) Bundled JRE for mac os X distribution need to patch `flavormap.properties`:
+add the line 
+~~~~~
+PDF: application/pdf 
+~~~~~
+(allows copy/paste of PDF)
+P.S. see if we can handle this as EMF ? (check if still needed anyway)
+
+#### For Java 14 distributions
+
+A branch of JSesh is being developped to use Java 14. What I currently do is :
+
+- get sure the PATH is correct (includes the jdk for java 14, and not a former one);
+- get sure JAVA_HOME is correct (it's used by Maven).
+
+Once JSesh is built, I have played with `jdeps` and `jlinks` to create the correct jre.
+
+I go to folder `jsesh-installer/target/mac/JSesh-7.5.0-SNAPSHOT/JSesh.app/Contents/lib`, and
+I build a shell script for jdeps:
+~~~sh
+JARS=bcmail-jdk14-138.jar:....:signInfoAppli-7.5.0-SNAPSHOT.jar:swing-layout-1.0.3.jar
+jdeps --ignore-missing-deps --list-deps -cp $JARS jseshAppli-7.5.0-SNAPSHOT.jar
+~~~
+where JARS is made from all jars in the folder. There are some missing dependencies related to mail, but JSesh doesn't use 
+mail, so it's not an issue.
+
+It gives me the list of modules needed by JSesh:
+~~~
+   java.base
+   java.datatransfer
+   java.desktop
+   java.logging
+   java.naming
+   java.prefs
+   java.sql
+   java.xml
+~~~
+
+I use this list to build and run the following script:
+~~~sh
+MODULES=java.base,java.datatransfer,java.desktop,java.logging,java.naming,java.prefs,java.sql,java.xml
+jlink --no-header-files --no-man-pages --add-modules  $MODULES --output jre
+~~~
+
+The resulting jre folder should be placed in Contents. The corresponding JRE is 75M large, which is smaller than the
+jre for 1.8 which was included in JSesh previously. This is not yet the master version, as I need to fix bugs.
 
 ------------------------------------
 ### Windows distribution
@@ -96,4 +154,16 @@ build the whole project: "mvn install".
 2. copy a 32 bit JRE in the JSesh folder on Windows. Ensure it's named "jre".
 3. start lauch4J and use the jsesh-bundler.xml file. It should create JSesh.exe in the JSesh folder.
 4. same for the file signInfo-bundler.xml
-5. run InnoDB on jsesh-inno.iss 
+5. run Inno Setup on jsesh-inno.iss. Generate a new ID for the build before building.
+
+
+
+## Note about github distribution (for personnal use mainly)
+
+To get the number of downloads for version 7.2.0 :
+
+~~~~~~~~~~~~~
+curl -i https://api.github.com/repos/rosmord/jsesh/releases/11259307
+~~~~~~~~~~~~~
+
+Remove the last number for all releases.
